<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Fisrt App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search </string>
    <string name="action_setting">Setting </string>
    <string name="ic_action_searchh">ic_launcher</string>
    <string name="btn_show">Ver Controles</string>
    <string name="title_show_control_window"> Controles</string>
    <string name="btnRegresar">Boton Normal</string>
    <string name="on">Toggle Button(On)</string>
    <string name="off">Toggle Button(Off)</string>
    <string name="icono_ok">Icono</string>

</resources>
