<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

   <EditText
        android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/edit_message" >

    </EditText>

   <Button
       android:id="@+id/button1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="0.61"
       android:text="@string/button_send" 
       android:onClick="sendMessage" />

   <Button
       android:id="@+id/btnShowControl"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="0.61"
       android:onClick="verControles"
       android:text="@string/btn_show" />
    
</LinearLayout>
